CDP-1887 FDA: Update value batch requirements for ACL works from previous periods: update ACL caclulation tab queries to use materialization